--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "firebase": "^5.8.4",
+    "slugify": "^1.3.4",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1"
   },
