--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "core-js": "^2.6.11",
     "firebase": "^5.8.4",
     "slugify": "^1.3.4",
     "vue": "^2.6.6",
